if WITH_TESTCASES

SUBDIRS=                \
 filterscenario001      \
 gainscenario001        \
 noisescenario001       \
 noisescenario002       \
 profilescenario001     \
 propagationscenario001 \
 phyupstreamscenario001 \
 phyupstreamscenario002 \
 phyupstreamscenario003 \
 phyupstreamscenario004 \
 phyupstreamscenario005 \
 phyupstreamscenario006

endif
