emaneincdir = $(includedir)/emane/application/

emaneinc_HEADERS =                       \
 configurationcontroller.h               \
 eventagentbuilder.h                     \
 eventagentmanager.h                     \
 eventgeneratorbuilder.h                 \
 eventgeneratormanager.h                 \
 libemane.h                              \
 logger.h                                \
 nembuilder.h                            \
 nembuilder.inl                          \
 nem.h                                   \
 nemmanager.h                            \
 statisticcontroller.h                   \
 transportadapter.h                      \
 transportbuilder.h                      \
 transportbuilder.inl                    \
 transportmanager.h                      

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
