emaneincdir = $(includedir)/emane/controls/

emaneinc_HEADERS =                           \
 antennaprofilecontrolmessage.h              \
 controlmessageids.h                         \
 flowcontrolcontrolmessage.h                 \
 frequencycontrolmessageformatter.h          \
 frequencycontrolmessage.h                   \
 otatransmittercontrolmessage.h              \
 r2rineighbormetriccontrolmessage.h          \
 r2rineighbormetriccontrolmessageformatter.h \
 r2rineighbormetric.h                        \
 r2rineighbormetric.inl                      \
 r2riqueuemetriccontrolmessage.h             \
 r2riqueuemetriccontrolmessageformatter.h    \
 r2riqueuemetric.h                           \
 r2riqueuemetric.inl                         \
 r2riselfmetriccontrolmessage.h              \
 r2riselfmetriccontrolmessageformatter.h     \
 receivepropertiescontrolmessage.h           \
 receivepropertiescontrolmessageformatter.h  \
 serializedcontrolmessage.h                  \
 timestampcontrolmessage.h                   \
 transmittercontrolmessageformatter.h        \
 transmittercontrolmessage.h

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
