emaneincdir = $(includedir)/emane/events/

emaneinc_HEADERS =                       \
 antennaprofileevent.h                   \
 commeffectevent.h                       \
 commeffect.h                            \
 commeffect.inl                          \
 eventids.h                              \
 locationevent.h                         \
 location.h                              \
 location.inl                            \
 pathlossevent.h                         \
 pathloss.h                              \
 pathloss.inl                            

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
