emaneincdir = $(includedir)/emane/events/

emaneinc_HEADERS =                       \
 antennaprofileevent.h                   \
 antennaprofileeventformatter.h          \
 antennaprofile.h                        \
 antennaprofile.inl                      \
 commeffectevent.h                       \
 commeffecteventformatter.h              \
 commeffect.h                            \
 commeffect.inl                          \
 eventids.h                              \
 locationevent.h                         \
 locationeventformatter.h                \
 location.h                              \
 location.inl                            \
 pathlossevent.h                         \
 pathlosseventformatter.h                \
 pathloss.h                              \
 pathloss.inl                            \
 slotinfo.h                              \
 slotinfo.inl                            \
 slotstructure.h                         \
 slotstructure.inl                       \
 tdmascheduleevent.h

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
