emaneincdir = $(includedir)/emane/utils/

emaneinc_HEADERS =                       \
 bitpool.h                               \
 bitpool.inl                             \
 conversionutils.h                       \
 factoryexception.h                      \
 netutils.h                              \
 parameterconvert.h                      \
 parameterconvert.inl                    \
 randomnumberdistribution.h              \
 recvcancelable.h                        \
 singleton.h                             \
 spawnmemberfunc.h                       \
 spectrumwindowutils.h                   \
 statistichistogramtable.h               \
 statistichistogramtable.inl             \
 timer.h                                 \
 timer.inl                               \
 runningaverage.h                        \
 commonlayerstatistics.h                 \
 vectorio.h

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
