emaneincdir = $(includedir)/emane/utils/

emaneinc_HEADERS =                       \
 bitpool.h                               \
 bitpool.inl                             \
 conversionutils.h                       \
 factoryexception.h                      \
 functionwrapper.h                       \
 functionwrapper.inl                     \
 netutils.h                              \
 parameterconvert.h                      \
 parameterconvert.inl                    \
 processingpool.h                        \
 processingpool.inl                      \
 randomnumberdistribution.h              \
 singleton.h                             \
 spectrumwindowutils.h                   \
 statistichistogramtable.h               \
 statistichistogramtable.inl             \
 threadutils.h                           \
 timer.h                                 \
 timer.inl                               \
 runningaverage.h                        \
 commonlayerstatistics.h                 \
 vectorio.h

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
